<resources>
    <string name="app_name">SberWifi</string>
    <string name="headerListView">Header</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="item_wifi_main">WiFi</string>
    <string name="item_menu_log">Отчет</string>

    <!-- wifi band start -->
    <string name="wifi_band_title" translatable="false">"2.4/5 GHz"</string>
    <string name="wifi_band_2ghz" translatable="false">"2.4 GHz"</string>
    <string name="wifi_band_5ghz" translatable="false">"5 GHz"</string>
    <!-- wifi band end -->

    <string name="channel_rating_best">"Лучшие каналы:"</string>
    <string name="channel_rating_best_none">"Нет"</string>
    <string name="channel_rating_best_alternative">", попробуйте альтернативный WiFi диапазон"</string>
    <string name="channel_rating_heading_rating">"Оценка каналов"</string>
    <string name="channel_rating_heading_number">"Номер канала"</string>
    <string name="channel_rating_heading_count">"Число точек доступа"</string>

    <string name="iperfHost">Хост</string>
    <string name="iperfPort">Порт</string>
    <string name="duration_toggles">Длительность</string>
    <string name="streams_toggle">Кол-во потоков</string>
    <string name="iperfMenu">iperf</string>
    <string name="channel_short_name">CH</string>
    <string name="name_detail_ssid">Имя сети (SSID)</string>
    <string name="name_mac">MAC адрес</string>
    <string name="name_central_frequency">Центральная частота</string>
    <string name="name_frequency_range">Диапазон частот</string>
    <string name="name_channel">Канал</string>
    <string name="name_bandwidth">Ширина канала</string>
    <string name="parameters_ap">Параметры AP</string>
    <string name="type_channel">Тип канала</string>
    <string name="distance">Расстояние до AP</string>
    <string name="vendor">Производитель</string>
    <string name="best_channel">Лучший канал:</string>
    <string name="ip">IP:</string>
    <string name="speed">Speed:</string>
    <string name="macdevice">MacDevice:</string>

</resources>
